added some images

--- a/presentations/parallel_ex_unit/deck.html
+++ b/presentations/parallel_ex_unit/deck.html
@@ -18,6 +18,13 @@ class: center, middle, headline
 * Super excited
 
 ---
+class: center, middle, img-full
+
+![I know the way!](/assets/images/i_know_the_way.gif)
+
+???
+
+---
 class: center, middle
 
 # Parallel ➡️  Distributed
